# sdd_process_example

./: .env.test  .gitignore  .pre-commit-config.yaml  COURSE_CORRECTION_COMPLETE.md  E2E_TEST_FIX_SUMMARY.md  E2E_TEST_STATUS.md  FIGMA_STYLES_NEEDED.md  FIGMA_VISIBILITY_ANALYSIS.md  FINAL_RESULTS.md  FINAL_SUMMARY.md  LICENSE  README.md  STATUS_UPDATE.md  STORY_2.10_COMPLETION_SUMMARY.md  STORY_2.1_COMPLETION_STATUS.md  TDD_PROGRESS_SUMMARY.md  UX_MERGE_SUMMARY.md  docker-compose.yml  eslint.config.js  noxfile.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.clinerules/: 01-git-standards.md  02-test-driven-development.md  typescript.md
.clinerules/workflows/: bmad-bmm-workflows-README.md  bmad-core-workflows-README.md
.gemini/: settings.json
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/agents/: bmad-agent-bmm-analyst.agent.md  bmad-agent-bmm-analyst.chatmode.md  bmad-agent-bmm-architect.agent.md  dev.md  (+16 more)
backend/: Dockerfile  entrypoint.sh
docs/: PRD.md  TESTING.md  architecture.md  bmm-workflow-status.yaml  epics.md  figma-ui-prompt.md  implementation-readiness-report-20251120.md  product-brief-dnd-dice-roller-2025-11-15.md  sprint-change-proposal-2025-11-23.md  test-design-system.md  validation-report-20251116100000.md
frontend/: Dockerfile  index.html  playwright.config.ts  tailwind.config.js  tsconfig.e2e.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
(+264 files in other folders)
