[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdd-process-example"
version = "0.1.0"
description = "SDD Process Example"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-socketio>=5.10.0",
    "aiofiles>=23.2.0",
    "redis>=5.0.0",
    "structlog>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "httpx>=0.24.0",
    "nox>=2024.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "C", "UP", "ANN"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["sdd_process_example"]
src_paths = ["backend/src"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["backend/tests", "backend/src"]
python_files = ["test_*.py"]
addopts = "-v"
pythonpath = ["backend/src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/sdd_process_example"]
